@@ -8,6 +8,8 @@
 	  Fix for Win32.
 	* configs/msc[67]-project.zip:
 	  Add portaudio files and modify projects.
+	* timidity/playmidi.c:
+	  Fix fatal typo around Chamberlin filter.
 
 2004-02-14  Saito <saito2@digitalme.com>
 
